# otel-tui

./: Cargo.toml
bins/otel-mock/: Cargo.toml
bins/otel-mock/src/: main.rs
bins/otel-tui/: Cargo.toml
bins/otel-tui/src/: buffer.rs  cli.rs  main.rs
