[workspace]
members = ["bins/*"]
resolver = "2"

[workspace.package]
edition = "2021"

[workspace.dependencies]
async-trait = "0.1.80"
built = { version = "0.7.3", features = ["git2"] }
clap = { version = "4.5.7", features = ["derive", "cargo", "string"] }
crossterm = "0.27.0"
opentelemetry_sdk = { version = "0.23.0", features = ["rt-tokio"] }
opentelemetry-otlp = "0.16.0"
opentelemetry-proto = { version = "0.6.0", features = ["gen-tonic-messages", "gen-tonic", "trace"] }
ratatui = "0.26.3"
snafu = "0.8.3"
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
tonic = { version = "0.11.0", features = ["transport"] }
tracing = "0.1.40"
tracing-opentelemetry = "0.24.0"
tracing-subscriber = "0.3.18"
